Добавлено поле в request а также написано несколько интеграционных тестов